[gd_scene load_steps=2 format=3 uid="uid://b6hq00u2y1qe2"]

[ext_resource type="Script" path="res://Scripts/Interface/multiplayer_ui.gd" id="1_2pukt"]

[node name="Multiplayer UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2pukt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Join" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
